# poolqtl

./: .Rhistory  .gitignore  .lintr  README.md  setup.cfg  sum_stats.txt
biophysical_cnn/: BindingCNNs.ipynb  Biophysical_CNNs.ipynb  bindingdata.py  biophysnn.py  biophysnn_raytune.py  correlate_enrichments.ipynb  de_novo_motifs.ipynb  experimental_cnns.ipynb  make_negative_set.ipynb  motifscanner.py  motifscanner_runner.py  motifscanner_template.ipynb  predict_enrich_runner.py  predict_enrich_summarize.ipynb  predict_enrichment.ipynb  process_mCross_PWMs.ipynb  score_variants.ipynb  score_variants.py  score_variants_HNRNPK.ipynb  seq_utils.pyx  tune_CNN_runner.py  tune_CNNs.ipynb
src/: 0_check_imputed_geno.ipynb  0b_deconvolve.ipynb  1_detect_ASB.ipynb  1_detect_ASB_1sample.ipynb  1_detect_ASB_RBFOX2.ipynb  1_detect_ASB_TDP43.ipynb  1_detect_ASB_hnRNPA1.ipynb  1_detect_ASB_laplace.ipynb  1_detect_ASB_old.ipynb  1_detect_ASB_spike_and_slab.ipynb  1_detect_ASB_vary_regularization.ipynb  1a_compare_reps.ipynb  2_sQTL_enrich.py  3_logistic_regression_enrich.Rmd  3_logistic_regression_enrich.html  3_logistic_regression_enrich.nb.html  ariana.ipynb  ariana_round2.ipynb  ariana_round2_VGAM.R  ariana_round2_VGAM.Rmd  ariana_round2_VGAM.ipynb  arianaround2_singledonor.R  arianaround2_singledonor.Rmd  arianaround2_singledonor.nb.html  asb_simulation.ipynb  basic_model_comparison.Rmd  bblrt_runner.py  bblrt_template.ipynb  chip_seq_asb.ipynb  metaanalyse_reps.ipynb  model_comparison.Rmd  model_comparison_deduped.Rmd  power_analysis.R  power_analysis_CHIP.R  power_analysis_RIPseq.R  (+6 more)
(+13 files in other folders)
