[metadata]
name = pooledQTL
description = Pooled detection of allele specific binding
long_description = Code to detect allele specific binding (ASB) of RNA binding proteins (RBP) to RNA from pooled (from multiple individuals) RNA immunoprecipation & sequencing (RIP-seq) data.
url = https://github.com/daklab/poolqtl
project_urls =
    Bug Tracker = https://github.com/daklab/poolqtl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyro
    torch
    scipy
    sklearn
    matplotlib
    pandas
    intervaltree

[options.packages.find]
where = src